# e-shop

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/carts/: admin.py  models.py  serializers.py  urls.py  views.py
api/carts/migrations/: 0001_initial.py
api/customers/: admin.py  models.py  serializers.py  urls.py  views.py
api/customers/migrations/: 0001_initial.py
api/hats/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/hats/migrations/: 0001_initial.py  0002_remove_hat_is_available.py  0003_alter_hat_price.py  0004_hat_updated_at.py  0005_alter_hat_price_alter_hat_updated_at.py  0006_alter_hat_name_customer_order.py  0007_cart_cartitem_delete_order.py  0008_alter_cart_customer_alter_customer_email_and_more.py  0009_remove_customer_user_customer_customer_id_and_more.py  0010_alter_hat_name_delete_hatimage.py  0011_remove_cart_is_active_cart_hats_delete_cartitem.py  0012_product_remove_orderitem_hat_remove_cart_hats_and_more.py  0013_alter_product_image_productimage.py
api/hats/templates/: index.html
api/orders/: admin.py  models.py  serializers.py  urls.py  views.py
api/orders/migrations/: 0001_initial.py
api/products/: admin.py  models.py  serializers.py  urls.py  views.py
api/products/migrations/: 0001_initial.py
core/: settings.py  urls.py
